--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: go
 go: "1.12"
 
+# Skip the install step. Don't `go get` dependencies. Only build with the code in vendor/
+install: skip
+
 services:
   - docker
 
